# markdown-media

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GETTING-STARTED.md  LICENSE  README.md  fix_guide.md  index.js  package-lock.json  package.json  plan.md  render.yaml  start.ko.md  start.md  updated_fix_guide.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench.yml  build-desktop.yml  build-native.yml  build.yml  ci.yml  docs.yml  publish.yml  test.yml  wasm.yml
api/: main.py  requirements.txt
app/controllers/: holidays_controller.rb
app/models/: holiday.rb  task.rb
chrome-extension/: manifest.json  mdm_core.d.ts  mdm_core.js  mdm_core_bg.wasm  mdm_core_bg.wasm.d.ts  popup.css  popup.html  popup.js
cli/: README.md  index.js  package.json
cli/commands/: batch.js  convert.js  serve.js  validate.js  watch.js
config/: routes.rb  routes_fix.rb
converter/: index.html
converters/: README.md  chart_to_png.py  docx_converter.py  html_converter.py  hwp_converter.py  hwpx_converter.py  pdf_converter.py  table_to_svg.py  table_to_svg_enhanced.py
converters/tests/: test_converters.py
core/: Cargo.toml
core/benches/: parser_bench.rs
core/config/: triage.toml
core/docs/: FORMAT_SUPPORT_PLAN.md
core/examples/: triage_dump.rs  watch.rs
core/scripts/: download-fonts.sh
core/src/: bench.rs  cache.rs  chunker.rs  csv_parser.rs  doc97.rs  epub.rs  gen_docx.rs  gen_pdf.rs  heic.rs  ir.rs  lib.rs  lint.rs  main.rs  manifest.rs  optimizer.rs  pii.rs  plugin.rs  renderer.rs  rtf.rs  txt_parser.rs  url_fetch.rs  wasm.rs  watch.rs  xls.rs
core/src/docx/: math.rs  mod.rs  parser.rs
core/src/equation/: mod.rs  tables.rs  tests.rs  to_hulk.rs  to_latex.rs
core/src/form/: fill.rs  matcher.rs  mod.rs  recognize.rs  scan.rs  seal.rs  tests.rs  zip_patch.rs
core/src/html/: mod.rs
core/src/hwp/: cfb_lenient.rs  crypto.rs  mod.rs  ole.rs  parser.rs  record.rs
core/src/hwp3/: johab.rs  johab_table.rs  mod.rs  parser.rs  reader.rs  records.rs
core/src/hwpml/: mod.rs  parser.rs
core/src/hwpx/: mod.rs  parser.rs
core/src/hwpx_gen/: blocks.rs  chart.rs  header.rs  ids.rs  image.rs  mod.rs  preset.rs  profile.rs  section.rs  table.rs  validate.rs
core/src/hwpx_render/: dom.rs  layout.rs  metrics.rs  mod.rs  reflow.rs  styles.rs  svg.rs
core/src/legal/: annex.rs  chains.rs  chunker.rs  exporter.rs  mod.rs  patterns.rs  types.rs
core/src/ocr/: detect.rs  engine.rs  mod.rs  models.rs  preprocess.rs  recognize.rs
core/src/pdf/: mod.rs  parser.rs  pdf_ocr.rs  table_detect.rs  triage.rs
core/src/pptx/: mod.rs
core/src/print/: mod.rs  parser.rs  pdf.rs  renderer.rs
core/src/utils/: bounded_io.rs  date_parser.rs  mod.rs
core/src/xlsx/: mod.rs
core/tests/: annex_tests.rs  golden_hwpx.rs  hwpx_render.rs  legal_integration_test.rs  parser_tests.rs  pdf_triage.rs
core/tests/golden/: emphasis_dot_preserved.md  endnote_inline.md  equation_block.md  equation_inline.md  footnote_inline.md  header_footer_inline.md  hyperlink_field.md  ruby_annotation.md  strikeout_3d_placeholder.md  strikeout_cont_real.md  underline_unknown_type.md
db/migrate/: add_missing_columns_to_tasks.rb  create_holidays.rb
db/seeds/: holidays_2025.rb
desktop/: .gitignore  BUILD-WINDOWS.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
desktop/icon-concepts/: generate-icons.sh
desktop/scripts/: build-signed.sh  check-no-color-literals.mjs
desktop/src/: app.html
desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  tauri.windows.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: history.rs  main.rs  markdown.rs  models.rs
desktop/src-tauri/src/commands/: batch.rs  convert.rs  export.rs  mod.rs  rhwp_edit.rs  viewer.rs
desktop/src-tauri/src/export/: md_to_docx.rs  md_to_hwpx.rs  md_to_pdf.rs  mod.rs
docs/: CONVERTER_ARCHITECTURE.md  DOCX_FORMAT_SPEC.md  HWP_FORMAT_SPEC.md  LAUNCH_HN.md  MCP_USAGE.md  MDM_SYNTAX_SPEC.md  PARSING_ANALYSIS_REPORT.md  PDF_FALLBACK.md  RUST_DEV_GUIDE.md  RUST_LEGAL_PARSER_DESIGN.md  RUST_PARSER_CONVERSION_CHECKLIST.md  TECHNICAL_SPEC.md  TEXT_FORMATS_SPEC.md  USER_GUIDE.md  index.html  mcp-integration-assessment.md  todo.md
docs/markitdown-compare/: README.md  comparison.html  csv-txt-matrix.md  docx-findings.md  docx-matrix.md  html-matrix.md  pdf-matrix.md  pptx-findings.md  pptx-matrix.md  xlsx-matrix.md
docs/rfcs/: 001-rhwp-bridge.md
docs/todo/: INTEGRATION_AUDIT_PHASE3_FIXES.md  WORKING_ON_1_5_TABLE_SVG.md  WORKING_ON_CLI_MAIN_RS_BUILD_FIX.md  WORKING_ON_PHASE_2_3_PARALLEL.md  competitive-gap.md  final-gap.md  gap-analysis.md  implementation-plan.md  long-term.md  remaining-roadmap.md  verification-checklist.md
pipeline/: __init__.py  orchestrator.py
plan/: README.md  ROADMAP_FORMATS.md  analysis-pros-cons.md  implementation-guide.md  javascript-parser-plan.md  market-analysis.md  mdm-file-structure.md  pdf-triage.md  roadmap.md  simple-example.md  syntax-design-study.md  testing-strategy.md  todo-immediate-tasks.md  use-cases-examples.md
playground/: index.html
samples/: README.md
samples/input/: 2026년 제1기 행정안전부 청년인턴 채용 공고(최종).hwpx  gov_sample.hwp  hancom.hwp  pyhwp_test.hwp  test2.hwp
scripts/: deploy-pypi.sh  deploy.sh  download-ocr-models.sh  eval-hwp-corpus.sh  eval-hwp-pairs.sh  eval-suneung-pdf.sh  extract_hwp3_johab_table.py  fetch-suneung-corpus.py  publish-crates.sh  publish-pypi.sh
tests/: benchmark_engine.py  e2e_test.sh  test_pipeline.py
tests/benchmark/: TEST_SETS.md  compare.sh  full_comparison.csv
tests/csv_benchmark/: test_basic.csv  test_tsv.tsv
tests/docx_benchmark/: compare_quality.py  generate_equation_docx.py  generate_test_docx.py  run_benchmark.sh  test_comprehensive.docx  test_equations.docx  test_korean_gov.docx  test_tables.docx
viewer/: index.html
web/: .gitignore  Dockerfile  Gemfile  package.json  pnpm-lock.yaml  render.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
(+317 files in other folders)
