[package]
name = "mdm-core"
version = "0.1.0"
edition = "2021"
description = "Markdown Media Core Engine - HWP Parser & Media Rendering"
license = "MIT"

[dependencies]
cfb = "0.12.1"
flate2 = "1.0"
zip = "2.2"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
encoding_rs = "0.8"
image = "0.25"
resvg = "0.44"
base64 = "0.22"
pdf-extract = "0.7"
lopdf = "0.34"

[lib]
name = "mdm_core"
path = "src/lib.rs"

[[bin]]
name = "hwp2mdm"
path = "src/main.rs"
